df-scan: fix use of mw_order in df_mw_compare (PR 86096)

PR rtl-optimization/86096
	* df-scan.c (df_mw_compare): Do not check mw_reg fields when
	comparing mw_order values.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@269189 138bc75d-0d04-0410-961f-82ee72b054a4